--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <label><input type="checkbox" data-category="landmark" checked> Landmarks</label>
                 <label><input type="checkbox" data-category="food" checked> Food</label>
                 <label><input type="checkbox" data-category="nightlife" checked> Nightlife</label>
+                <label><input type="checkbox" data-category="scuba" checked> Scuba Diving</label>
                 <label><input type="checkbox" data-category="transport" checked> Transport</label>
             </div>
 
